# medical-harness

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  demo_server.py  docker-compose.yml  pyproject.toml
docs/: README.md
openclaw_medical_harness/: __init__.py  base.py  context.py  daemon.py  demo_page.py  env.py  media.py  openarena.py  recovery.py  validator.py
openclaw_medical_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openclaw_medical_harness/agents/: __init__.py
openclaw_medical_harness/diagnosis/: __init__.py  diagnostic_harness.py
openclaw_medical_harness/drug_discovery/: __init__.py  drug_harness.py
openclaw_medical_harness/health_management/: __init__.py  health_harness.py
openclaw_medical_harness/mcp_tools/: __init__.py  adapters.py  registry.py
scripts/: deploy.sh  openarena_submit.py  openclawd.py
sdk/: openclaw-client.d.ts  openclaw-client.js
tests/: test_mimo_media.py  test_registry_and_server.py
