[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-medical-harness"
version = "0.2.0"
description = "Medical AI Agent Orchestration Framework for OpenClaw"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "MoKangMedical", email = "mokangmedical@example.com" },
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["openclaw_medical_harness*"]
